.kube/deployment-valuematch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bdiviz-valuematch
  labels:
    app: bdiviz-valuematch
spec:
  # Run two copies of the Pod
  replicas: 1
  # Perform rolling updates, starting containers before stopping the old ones
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      # This is how the Deployment recognizes its Pods, has to match the labels
      # of the Pod template
      app: bdiviz-valuematch
  template:
    metadata:
      labels:
        app: bdiviz-valuematch
    spec:
      containers:
        # Here's our Flask container
        - name: bdiviz-app-valuematch
          # Put your own image here
          image: edenwu/bdi-viz-react:amd64-hsrn
          imagePullPolicy: "Always"
          ports:
            # This is the port we'll expose to the internet eventually
            - name: web
              containerPort: 3000
          resources:
            requests:
              cpu: "4000m"
              memory: "20Gi"
