.kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bdiviz
  labels:
    app: bdiviz
  annotations:
    # Use the HAProxy ingress controller (currently the only option)
    kubernetes.io/ingress.class: haproxy
    # Instruct HAProxy to redirect HTTP to HTTPS, with the 301 "permanent" code
    haproxy.org/ssl-redirect: "true"
    haproxy.org/ssl-redirect-code: "301"
    # Instruct HAProxy to provide the end-user's address in the 'X-Forwarded-For' header
    haproxy.org/forwarded-for: "true"
    # haproxy.org/auth-type: basic-auth
    # haproxy.org/auth-secret: bdiviz-ingress-auth
    hpc.nyu.edu/access: "public"
spec:
  rules:
    - host: bdiviz.users.hsrn.nyu.edu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bdiviz
                port:
                  number: 3000
    # - host: bdiviz-openai.users.hsrn.nyu.edu
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: bdiviz-openai
    #             port:
    #               number: 3000
    # - host: bdiviz-valuematch.users.hsrn.nyu.edu
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: bdiviz-valuematch
    #             port:
    #               number: 3000
    # - host: bdiviz-valuematch-a.users.hsrn.nyu.edu
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: bdiviz-valuematch-backup-a
    #             port:
    #               number: 3000
    # - host: bdiviz-valuematch-b.users.hsrn.nyu.edu
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: bdiviz-valuematch-backup-b
    #             port:
    #               number: 3000
